--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -1,7 +1,20 @@
+{% load static %}
 <nav>
-    <ul class="menu">
-        <li class="logo">LOGO HERE</li>
-        <li class="item">My Profile</li>
-        <li class="item">My Lab</p>
+    <div class="header-logo">
+    <h1><a class="text" href="{% url 'index' %}">LaboraTasks</a></h1>
+    <a class="logo1" href="{% url 'index' %}"><img src={% static "images/logo_pink.png" %} alt="LaboraTasks Logo"></a>
+    <a class="logo2" href="{% url 'index' %}"><img src={% static "images/logo_inverted.png" %} alt="LaboraTasks Logo"></a>
+    </div>
+    <ul class="nav-options">
+        <div class="item-gr1">
+            <li><a class="item1" href="{% url 'register' %}">Register</a></li>
+            <li>/</li>
+            <li><a class="item2" href="{% url 'login' %}">Log in</a></li>
+        </div>
+        <div class="item-gr2">
+            <li><a class="item3" href="#example">Example</a></li>
+            <li>-</li>
+            <li><a class="item4" href="#contact">Contact</a></li>
+        </div>
     </ul>
 </nav>
