--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -12,7 +12,7 @@
             <li><a class="item2" href="{% url 'login' %}">Log in</a></li>
         </div>
         <div class="item-gr2">
-            <li><a class="item3" href="#example">Example</a></li>
+            <li><a class="item3" href="#about">About</a></li>
             <li>-</li>
             <li><a class="item4" href="#contact">Contact</a></li>
         </div>
