--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -34,7 +34,8 @@
         </div>
     </div>
 </section>
-
+<hr id="hero-features-sep">
+<section>
 <div id="features">
     <div class="feature">
       <img src="https://via.placeholder.com/100x100" alt="Users">
@@ -48,13 +49,14 @@
     </div>
     <div class="feature">
       <img src="https://via.placeholder.com/100x100" alt="Tasks">
-      <h3>Assign Tasks and track progress</h3>
-      <p>Assign tasks to users and track progress in real-time.</p>
+      <h3>Track progress</h3>
+      <p>Assign tasks to users and your lab's progress</p>
     </div>
 </div>
+</section>
 
-<div class="about">
-    <h2>ABOUT</h2>
+<div id="about">
+    <h2>ABOUT THE PROJECT</h2>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie laoreet metus, eu consequat turpis tincidunt sit amet. Pellentesque eget metus eu sapien consequat convallis sed eu dui. Fusce ut eleifend dolor. Suspendisse commodo, nunc non dignissim tempor, massa ligula posuere arcu, sed tincidunt nunc odio id dolor. Cras in sagittis libero. Ut vel ultricies felis. Nam venenatis nulla erat, ac tempus lorem malesuada in. Curabitur venenatis dolor lacus, vel aliquam tellus imperdiet mollis. Vestibulum non ipsum et purus eleifend consectetur vitae quis tortor. Etiam ullamcorper lobortis nulla sed dictum. Nunc convallis tellus nec arcu tempor egestas. Duis convallis at odio eget consequat. Cras non ipsum in leo venenatis ultricies non laoreet purus. Donec ultricies vitae tellus fermentum pulvinar.
 
@@ -65,6 +67,15 @@
         Maecenas gravida erat est, eget pharetra lorem fermentum vel. Donec mauris dolor, hendrerit id nisl eu, viverra aliquet sem. Sed fermentum mollis enim et lacinia. Nunc mauris nisi, cursus a enim non, aliquam mollis ligula. Mauris venenatis urna id quam suscipit, eu vestibulum velit sollicitudin. Fusce scelerisque, ante sit amet semper ullamcorper, lectus nisi vestibulum sem, sed tempor est lectus nec lorem. Quisque mollis augue eget venenatis porttitor.
 
         Nunc vel rutrum diam. Mauris eu maximus tortor, sit amet pulvinar neque. Integer nec egestas ipsum, luctus pellentesque est. Donec et aliquam lorem. Sed at placerat metus. Vestibulum pulvinar tempus dui in bibendum. Etiam fermentum purus orci, in cursus ex cursus et. Aenean feugiat risus eu tortor sodales, ac venenatis erat ornare. Aenean blandit urna ante, sed sollicitudin libero egestas quis. Cras mattis, lacus sed pulvinar fringilla, urna mauris porttitor lorem, sit amet placerat est tellus eget tortor. Proin mollis tortor tellus, et lacinia quam semper non. Vivamus suscipit orci lorem, ac dignissim libero elementum facilisis. Suspendisse suscipit enim sit amet dictum mollis. Maecenas non dignissim nisl. Suspendisse scelerisque vulputate fringilla. Pellentesque pellentesque, risus vel accumsan consequat, nisl leo vehicula ex, vel commodo nibh urna id orci. Vivamus cursus. 
+    </p>
+</div>
+
+<div id="contact">
+    <h2>CONTAC FORM</h2>
+    <p>
+        CREATE CONTACT FORM HERE<br><br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie laoreet metus, eu consequat turpis tincidunt sit amet. Pellentesque eget metus eu sapien consequat convallis sed eu dui. Fusce ut eleifend dolor. Suspendisse commodo, nunc non dignissim tempor, massa ligula posuere arcu, sed tincidunt nunc odio id dolor. Cras in sagittis libero. Ut vel ultricies felis. Nam venenatis nulla erat, ac tempus lorem malesuada in. Curabitur venenatis dolor lacus, vel aliquam tellus imperdiet mollis. Vestibulum non ipsum et purus eleifend consectetur vitae quis tortor. Etiam ullamcorper lobortis nulla sed dictum. Nunc convallis tellus nec arcu tempor egestas. Duis convallis at odio eget consequat. Cras non ipsum in leo venenatis ultricies non laoreet purus. Donec ultricies vitae tellus fermentum pulvinar.
+
     </p>
 </div>
 
