Adjust hero header margin/width

--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -5,7 +5,7 @@
 
 <section class="hero">
     <div class="hero-header">
-        <h1>LaboraTasks, a laboratory tasks manager</h1>
+        <h1>LaboraTasks,<br>a laboratory tasks manager</h1>
         <p>Streamline your lab workflow and manage tasks efficiently.</p>
         <div class="buttons">
             <a class="register" href="{% url 'register' %}">Register</a>
