--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -75,6 +75,7 @@
 
 <div id="contact">
     <h2>CONTAC FORM</h2>
+    <a class="contact" href="{% url 'contact' %}">CLICK CONTACT TEST</a>
     <p>
         CREATE CONTACT FORM HERE<br><br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie laoreet metus, eu consequat turpis tincidunt sit amet. Pellentesque eget metus eu sapien consequat convallis sed eu dui. Fusce ut eleifend dolor. Suspendisse commodo, nunc non dignissim tempor, massa ligula posuere arcu, sed tincidunt nunc odio id dolor. Cras in sagittis libero. Ut vel ultricies felis. Nam venenatis nulla erat, ac tempus lorem malesuada in. Curabitur venenatis dolor lacus, vel aliquam tellus imperdiet mollis. Vestibulum non ipsum et purus eleifend consectetur vitae quis tortor. Etiam ullamcorper lobortis nulla sed dictum. Nunc convallis tellus nec arcu tempor egestas. Duis convallis at odio eget consequat. Cras non ipsum in leo venenatis ultricies non laoreet purus. Donec ultricies vitae tellus fermentum pulvinar.
