Add proper ref to anchor about/contact

--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -12,9 +12,9 @@
             <li><a class="item2" href="{% url 'login' %}">Log in</a></li>
         </div>
         <div class="item-gr2">
-            <li><a class="item3" href="#about">About</a></li>
+            <li><a class="item3" href="{% url 'index' %}#about">About</a></li>
             <li>-</li>
-            <li><a class="item4" href="#contact">Contact</a></li>
+            <li><a class="item4" href="{% url 'index' %}#contact">Contact</a></li>
         </div>
     </ul>
 </nav>
