--- a/labtasks/static/styles/main.css
+++ b/labtasks/static/styles/main.css
@@ -344,6 +344,14 @@ nav {
     scroll-margin-top: 2em;
     margin: auto;
     text-align: center;
+    align-items: center;
     width: 75%;
     font-size: 2em;
+}
+
+.form-table {
+    text-align: center;
+    margin: auto;
+    border: 1px solid var(--primary-text-col);
+    width: 90%;
 }
