--- a/labtasks/static/styles/main.css
+++ b/labtasks/static/styles/main.css
@@ -341,17 +341,84 @@ nav {
 }
 
 #about, #contact {
-    scroll-margin-top: 2em;
+    scroll-margin-top: 2.5em;
     margin: auto;
     text-align: center;
     align-items: center;
     width: 75%;
     font-size: 2em;
+    margin-top: 2em;
 }
 
-.form-table {
-    text-align: center;
-    margin: auto;
-    border: 1px solid var(--primary-text-col);
+.contact-success-container {
+    color: var(--secondary-text-col);
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 40px 40px;
     width: 90%;
+    margin: auto;
+    padding: 0.5em;
+    margin-bottom: 2em;
+}
+
+
+.form-table {
+    width: 90%;
+    padding-bottom: 1em;
+
+}
+
+.form-table th {
+    text-align: right;
+    padding: 0 1em;
+}
+
+.form-table input[type="text"],
+.form-table input[type="email"],
+.form-table textarea {
+    width: 100%;
+    padding: 0.75em;
+    margin-top: 0.5em;
+    box-sizing: border-box;
+    border: 2px solid var(--primary-text-col);
+    border-radius: 10px;
+    font-size: 0.5em;
+}
+
+.form-table .errorlist {
+    width: 75%;
+    margin: auto;
+    /* padding: 0.75em; */
+    /* margin-top: 0.5em; */
+    box-sizing: border-box;
+    border: 2px solid var(--primary-text-col);
+    border-radius: 10px;
+    font-size: 0.75em;
+    font-weight: bold;
+    color: var(--accent-pink);
+    background-color: var(--primary-shadow);
+}
+
+#contact-submit {
+    position: absolute;
+    text-align: center;
+    width: 225px;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 10px;
+    font-size: 1em;
+    padding: 0.5em;
+    color: var(--primary-text-col);
+    border: 4px solid var(--primary-text-col);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+#contact-submit:hover {
+    color: var(--secondary-text-col);
+    background: var(--primary-shadow);
+    text-decoration: none;
+    border-radius: 40px 10px;
+}
+
+#spacing-bottom-submit {
+    margin-bottom: 150px;
 }
