Add html handle header error on contact_email

--- a/labtasks/contact_email/templates/contact_email/contact.html
+++ b/labtasks/contact_email/templates/contact_email/contact.html
@@ -4,6 +4,8 @@
     <p class="contact-success">
         You should receive a confirmation email soon and a response from us ASAP. Thanks :)
     </p>
+</div>
+    <a id="contact-success-btn" href="{% url 'base:index' %}">Go back</a>
 
 
 {% else %}
