Implement checkbox for project goals/functions

--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -59,18 +59,33 @@
 
 <div id="about">
     <h2>ABOUT THE PROJECT</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc molestie laoreet metus, eu consequat turpis tincidunt sit amet. Pellentesque eget metus eu sapien consequat convallis sed eu dui. Fusce ut eleifend dolor. Suspendisse commodo, nunc non dignissim tempor, massa ligula posuere arcu, sed tincidunt nunc odio id dolor. Cras in sagittis libero. Ut vel ultricies felis. Nam venenatis nulla erat, ac tempus lorem malesuada in. Curabitur venenatis dolor lacus, vel aliquam tellus imperdiet mollis. Vestibulum non ipsum et purus eleifend consectetur vitae quis tortor. Etiam ullamcorper lobortis nulla sed dictum. Nunc convallis tellus nec arcu tempor egestas. Duis convallis at odio eget consequat. Cras non ipsum in leo venenatis ultricies non laoreet purus. Donec ultricies vitae tellus fermentum pulvinar.
-
-        Duis est lacus, pretium sed tempus ut, dictum eget erat. Nunc quis nulla efficitur augue posuere scelerisque eget eu odio. In hac habitasse platea dictumst. Aliquam erat volutpat. Integer vitae pellentesque tortor. Mauris justo magna, condimentum ut laoreet ac, eleifend a diam. Duis vel mauris ligula. Cras tristique, felis sit amet dictum lobortis, elit odio luctus odio, sit amet elementum dolor massa sit amet ex.
-
-        Donec sed eros scelerisque, interdum ante non, elementum nunc. Nunc vitae ultrices nulla, at feugiat velit. Phasellus pretium libero massa, et posuere purus bibendum vitae. Pellentesque nec libero quis dolor efficitur scelerisque. Nam in nisl in lectus congue scelerisque sit amet ac est. Nam ultricies dictum scelerisque. Pellentesque a justo ut mi condimentum rutrum. Nam eu sapien eu ipsum molestie dignissim non et nunc. Nullam sit amet volutpat nunc. Vivamus diam enim, placerat eget quam et, fermentum pharetra justo. Suspendisse fringilla viverra condimentum. Donec quis pellentesque sapien, sed elementum lorem. Nunc finibus, metus id ullamcorper iaculis, sapien purus sagittis orci, quis porttitor ante odio non eros. Maecenas nec odio aliquam, aliquam ipsum et, aliquet leo. Morbi quis aliquet libero.
-
-        Maecenas gravida erat est, eget pharetra lorem fermentum vel. Donec mauris dolor, hendrerit id nisl eu, viverra aliquet sem. Sed fermentum mollis enim et lacinia. Nunc mauris nisi, cursus a enim non, aliquam mollis ligula. Mauris venenatis urna id quam suscipit, eu vestibulum velit sollicitudin. Fusce scelerisque, ante sit amet semper ullamcorper, lectus nisi vestibulum sem, sed tempor est lectus nec lorem. Quisque mollis augue eget venenatis porttitor.
-
-        Nunc vel rutrum diam. Mauris eu maximus tortor, sit amet pulvinar neque. Integer nec egestas ipsum, luctus pellentesque est. Donec et aliquam lorem. Sed at placerat metus. Vestibulum pulvinar tempus dui in bibendum. Etiam fermentum purus orci, in cursus ex cursus et. Aenean feugiat risus eu tortor sodales, ac venenatis erat ornare. Aenean blandit urna ante, sed sollicitudin libero egestas quis. Cras mattis, lacus sed pulvinar fringilla, urna mauris porttitor lorem, sit amet placerat est tellus eget tortor. Proin mollis tortor tellus, et lacinia quam semper non. Vivamus suscipit orci lorem, ac dignissim libero elementum facilisis. Suspendisse suscipit enim sit amet dictum mollis. Maecenas non dignissim nisl. Suspendisse scelerisque vulputate fringilla. Pellentesque pellentesque, risus vel accumsan consequat, nisl leo vehicula ex, vel commodo nibh urna id orci. Vivamus cursus. 
-    </p>
-</div>
+    <p class="about-subheader">This is a project for a web development introduction class. Here's the list of functionality I want to implement:</p>
+    
+    <div class="item-check">
+        <div class="checkbox-rect">
+          <input type="checkbox" id="checkbox-rect1" name="check">
+          <label for="checkbox-rect1">Contact form with confirmation email on the backend</label>
+        </div>
+    </div>
+    <div class="item-check">
+        <div class="checkbox-rect">
+          <input type="checkbox" id="checkbox-rect2" name="check">
+          <label for="checkbox-rect2">Register users and auth for login</label>
+        </div>
+    </div>
+    <div class="item-check">
+        <div class="checkbox-rect">
+          <input type="checkbox" id="checkbox-rect3" name="check">
+          <label for="checkbox-rect3">Link users to labs</label>
+        </div>
+    </div>
+    <div class="item-check">
+        <div class="checkbox-rect">
+          <input type="checkbox" id="checkbox-rect4" name="check">
+          <label for="checkbox-rect4">Users posting messages in lab spaces</label>
+        </div>
+    </div>
+</div>  
 <section>
 <div id="contact">
     <h2>CONTACT US</h2>
