--- a/labtasks/static/styles/main.css
+++ b/labtasks/static/styles/main.css
@@ -350,6 +350,75 @@ nav {
     margin-top: 2em;
 }
 
+
+/* checkbox-rect */
+
+.item-check {
+    margin: auto;
+    width: 90%;
+}
+.checkbox-rect input[type="checkbox"] {
+    display: none;
+  }
+
+  .checkbox-rect {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 15px;
+    
+}
+/* .checkbox-rect input[type="checkbox"] {
+    font-size: 20px;
+} */
+.checkbox-rect input[type="checkbox"] + label {
+    display: block;
+    position: relative;
+    padding-left: 60px;
+    margin-bottom: 20px;
+    margin-left: 50px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    color:white;
+}
+
+.checkbox-rect input[type="checkbox"]:hover + label:hover {
+    color: var(--primary-shadow);
+}
+.checkbox-rect input[type="checkbox"]:hover + label:before {
+    background: var(--primary-text-col);
+    box-shadow: inset 0px 0px 0px 2px #f7f2f2;
+}
+.checkbox-rect input[type="checkbox"] + label:last-child {
+    margin-bottom: 0;
+}
+.checkbox-rect input[type="checkbox"] + label:before {
+    content: "";
+    display: block;
+    width: 1em;
+    height: 1em;
+    border: 1px solid #343a3f;
+    border-radius: 0.2em;
+    position: absolute;
+    left: 0;
+    top: 0;
+    -webkit-transition: all 0.2s, background 0.2s ease-in-out;
+    transition: all 0.2s, background 0.2s ease-in-out;
+    background: #f3f3f3;
+}
+.checkbox-rect input[type="checkbox"]:checked + label:before {
+    width: 1.3em;
+    height: 1.3em;
+    border-radius: 0.2em;
+    border: 2px solid #fff;
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    background: var(--primary-text-col);
+    box-shadow: 0 0 0 1px #000;
+}
+
 .contact-success-container {
     color: var(--secondary-text-col);
     background: rgba(0, 0, 0, 0.5);
