--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -7,9 +7,9 @@
     </div>
     <ul class="nav-options">
         <div class="item-gr1">
-            <li><a class="item1" href="{% url 'base:register' %}">Register</a></li>
+            <li><a class="item1" href="{% url 'user_authentication:register' %}">Register</a></li>
             <li>/</li>
-            <li><a class="item2" href="{% url 'base:login' %}">Log in</a></li>
+            <li><a class="item2" href="{% url 'user_authentication:login' %}">Log in</a></li>
         </div>
         <div class="item-gr2">
             <li><a class="item3" href="{% url 'base:index' %}#about">About</a></li>
