Link 2nd stylesheet login/reg/chat in block

--- a/labtasks/static/styles/user_auth.css
+++ b/labtasks/static/styles/user_auth.css
@@ -1,152 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
-
-
-:root {
-  --font-family: "Roboto", sans-serf;
-  --normal-font: 400;
-  --bold-font: 700;
-  --bolder-font: 900;
-  --accent-blue: #333399;
-  --accent-pink: #ff00cc;
-  --accent-yellow: #FFAD46;
-  --primary-text-col: #000;
-  --secondary-text-col: #FFFFFF;
-  --primary-shadow: rgba(0,0,0,0.75);
-  
+h1 {
+    color: white;
 }
-
-/* BASE LAYER */
-html {
-    scroll-behavior: smooth;
-}
-
-ul {
-    list-style-type: none;
-}
-
-a {
-    color: var(--secondary-text-col)
-}
-
-a:hover {
-    color: var(--accent-pink)
-}
-
-body {
-    background: linear-gradient(to right, var(--accent-blue), var(--accent-pink)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    font-family: var(--font-family);
-    font-size: 16px;
-}
-
-h1, h2, h3 {
-    color: var(--secondary-color);
-}
-
-
-/* NAVBAR SPECIFIC */
-nav {
-    /* positioning */
-    font-size: 1.25em;
-    position: sticky;
-    top: 0;
-    left: 10%;
-    z-index: 1;
-    width: 75%;
-
-    /* Flexbox */
-    padding: 0em 2em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-    /* Color-shape bar */
-    background-color: var(--primary-shadow);
-    color: var(--secondary-text-col);
-    border-radius: 50px;
-    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-}
-
-.header-logo {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 20%;
-    height: 0.5em;
-    flex-basis: 12em;
-}
-
-.header-logo .text{
-    font-style: italic;
-    background: linear-gradient(to right, var(--accent-yellow), var(--accent-pink)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color:transparent;
-    background-clip: text;
-}
-/* #FFAD46 */
-.header-logo img {
-    width: 32px;
-    height: auto;
-}
-
-/* logo swap on hover */
-.header-logo .logo2 {
-    display:none;
-}
-.header-logo:hover .logo1 {
-    display:none;
-}
-.header-logo:hover .logo2 {
-    display:block;
-}
-.header-logo:hover .text {
-    color: var(--secondary-text-col)
-    
-}
-
-.nav-options {
-    display: flex;
-    width: 66%;
-    align-items: right;
-    justify-content: space-around;
-    text-align: right;
-
-}
-
-.nav-options .item-gr1 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    width: 25%;
-    flex-basis: 8em;
-}
-.nav-options .item-gr2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    width: 30%;
-    flex-basis: 9em;
-}
-
-
-.nav-options a {
-    /* background: var(--accent-pink); */
-    background: linear-gradient(to right, var(--accent-yellow), var(--accent-pink)); 
-    color:transparent;
-    background-clip: text;
-}
-
-/* Hover effect for urls navbar */
-.nav-options .item1:hover {
-    color: var(--secondary-text-col);
-}
-.nav-options .item2:hover {
-    color: var(--secondary-text-col);
-}
-.nav-options .item3:hover {
-    color: var(--secondary-text-col);
-}
-.nav-options .item4:hover {
-    color: var(--secondary-text-col);
-}
-
