--- a/labtasks/templates/main.html
+++ b/labtasks/templates/main.html
@@ -9,14 +9,14 @@
         <meta name="Laboratory tasks dashboard and manager" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
-        {% block user_auth_styles %}{% endblock user_auth_styles %}
+        {% block other_stylesheet %}{% endblock other_stylesheet %}
     </head>
     <body>
     {% include "navbar.html" %}
     
     {% block content  %}
     
-    {% endblock %}
+    {% endblock content %}
     
     </body>
 </html>
