--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -6,10 +6,15 @@
     <a class="logo2" href="{% url 'base:index' %}"><img src={% static "images/logo_inverted.png" %} alt="LaboraTasks Logo"></a>
     </div>
     <ul class="nav-options">
-        <div class="item-gr1">
+        <div class="item-gr5">
+        {% comment %} <div class="{% if user.is_authenticated %}item-gr3{% else %}item-gr1{% endif %}"> {% endcomment %}
             <li><a class="item1" href="{% url 'user_authentication:register' %}">Register</a></li>
             <li>/</li>
             <li><a class="item2" href="{% url 'user_authentication:login' %}">Log in</a></li>
+            {% comment %} ADD IF USER.ISAUTH {% endcomment %}
+            <li>/</li>
+            <li><a class="item5" href="{% url 'labspaces:your_labspaces' %}">My Labspaces</a></li>
+
         </div>
         <div class="item-gr2">
             <li><a class="item3" href="{% url 'base:index' %}#about">About</a></li>
