Labspace message board first draft

--- a/labtasks/labspaces/templates/labspaces/labspace.html
+++ b/labtasks/labspaces/templates/labspaces/labspace.html
@@ -6,9 +6,20 @@
 {% endblock other_stylesheet %}
 
 {% block content %}
+<div id="labspace-header"> 
+    <h2 class="labspace-title">{{ labspace.host }}'s <em color="white">{{ labspace.name }}</em> labspace</h2>
+    <p class="description">{{ labspace.description }}</p>
+</div>
 
-<h1>NAME = {{labspace.name}}</h1>
-<p>ID = {{labspace.pk}}</p>
-<p>DESCR = {{labspace.description}}</p>
+<div id="labspace-messages">
+
+    {% for message in messages %}
+    <div class="user-post" {% if message.user == current_user %}left-align{% else %}right-align{% endif %}>
+        <h3>@{{ message.user }}<h3>
+        <p class="body"> {{ message.body }}</p>
+        <p class="timestamp">posted {{ message.created|timesince }} ago</p>
+    </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
