--- a/labtasks/labspaces/templates/labspaces/labspace.html
+++ b/labtasks/labspaces/templates/labspaces/labspace.html
@@ -16,15 +16,21 @@
 
 <div id="labspace-messages">
 
-    {% for message in messages %}
-    
-    <div class="user-post" {% if message.user == current_user %}left-align{% else %}right-align{% endif %}>
-        <h3>@{{ message.user }}<h3>
-        <p class="body"> {{ message.body }}</p>
-        <p class="timestamp">posted {{ message.created|timesince }} ago</p>
-    </div>
+    {% if messages %}
+        {% for message in messages %}
+        
+        <div class="user-post" {% if message.user == current_user %}left-align{% else %}right-align{% endif %}>
+            <h3>@{{ message.user }}<h3>
+            <p class="body"> {{ message.body }}</p>
+            <p class="timestamp">posted {{ message.created|timesince }} ago</p>
+        </div>
+        {% endfor %}
+    {% else %}
+        <div class="no-messages">
+            <h2>There are no messages in this labspace yet. Be the first to write something!</h2>
+        </div>
+    {% endif %}
 
-    {% endfor %}
 </div>
 
 {% endblock %}
