--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -64,25 +64,25 @@
     <div class="item-check">
         <div class="checkbox-rect">
           <input type="checkbox" id="checkbox-rect1" name="check">
-          <label for="checkbox-rect1">Contact form with confirmation email on the backend</label>
+          <label for="checkbox-rect1">Configure a confirmation email backend with SendGrid</label>
         </div>
     </div>
     <div class="item-check">
         <div class="checkbox-rect">
           <input type="checkbox" id="checkbox-rect2" name="check">
-          <label for="checkbox-rect2">Register users and auth for login</label>
+          <label for="checkbox-rect2">User registration and lab affiliation</label>
         </div>
     </div>
     <div class="item-check">
         <div class="checkbox-rect">
           <input type="checkbox" id="checkbox-rect3" name="check">
-          <label for="checkbox-rect3">Link users to labs</label>
+          <label for="checkbox-rect3">CRUD principles on Labspaces/chatrooms</label>
         </div>
     </div>
     <div class="item-check">
         <div class="checkbox-rect">
           <input type="checkbox" id="checkbox-rect4" name="check">
-          <label for="checkbox-rect4">Users posting messages in lab spaces</label>
+          <label for="checkbox-rect4">Message board and search functionality</label>
         </div>
     </div>
 </div>  
