--- a/labtasks/labspaces/templates/labspaces/your_labspaces.html
+++ b/labtasks/labspaces/templates/labspaces/your_labspaces.html
@@ -14,25 +14,28 @@
 
 <div id="your-labspaces">
     <h2>YOUR LABSPACES</h2>
-
+    <p class="select-advice">Select a labspace!</p>
     {% for labspace in labspaces %}
     <div class="labspace-check">
         <div class="labspace-checkbox">
-            <input type="checkbox" id="labspace-checkbox{{ labspace.id }}" name="check" data-url="{% url 'labspaces:labspace' labspace.id %}">
+            <input type="checkbox" id="labspace-checkbox{{ labspace.id }}" name="check" labspace-url="{% url 'labspaces:labspace' labspace.id %}" edit-url="{% url 'labspaces:edit_labspace' labspace.id %}" delete-url="{% url 'labspaces:delete_labspace' labspace.id %}">
             <label for="labspace-checkbox{{ labspace.id }}">{{ labspace.name }} 
-            <span style="color: var(--primary-shadow); font-size: 0.75em;">
+            <span style="color: var(--accent-yellow); font-size: 0.75em;">
                 {% if timesince_last_message|get_timesince:labspace.id == "No messages yet" %} 
-                &#8594; {{ timesince_last_message|get_timesince:labspace.id }}
+                &nbsp;&nbsp;&nbsp;&#8594;&nbsp;&nbsp;&nbsp; {{ timesince_last_message|get_timesince:labspace.id }}
                 {% else %}
-                &#8594; last activity: {{ timesince_last_message|get_timesince:labspace.id }}
+                &nbsp;&nbsp;&nbsp;&#8594;&nbsp;&nbsp;&nbsp; last activity: {{ timesince_last_message|get_timesince:labspace.id }}
                 {% endif %}
-            </span></label>
+            </span>
+            </label>
         </div>
     </div>
     {% endfor %}
 
-    <div class="buttons">
+    <div class="labspace-buttons">
         <button id="selected-labspace-btn" type="submit">Go to labspace!</button>
+        <button id="edit-labspace-btn" type="submit">Edit labspace</button>
+        <button id="delete-labspace-btn" type="submit">Delete labspace</button>
     </div>
 </div>
 <div id="create-labspace-container">
